# rosbags

./: .gitlab-ci.yml  CHANGES.rst  README.rst  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg
.github/workflows/: ci.yml  deploy-pages.yml
docs/: conf.py  index.rst
docs/examples/: edit_message_definition.py  edit_message_definition.rst  register_types_files.py  save_images_rosbag1.py  use_with_native.py
docs/topics/: highlevel.rst  rosbag2.rst  serde.rst
src/rosbags/convert/: __init__.py  __main__.py  converter.py
src/rosbags/highlevel/: __init__.py  anyreader.py
src/rosbags/interfaces/: __init__.py
src/rosbags/rosbag1/: __init__.py  reader.py  writer.py
src/rosbags/rosbag2/: __init__.py  errors.py  metadata.py  reader.py  storage_mcap.py  storage_sqlite3.py  writer.py
src/rosbags/serde/: __init__.py  cdr.py  messages.py  primitives.py  ros1.py  serdes.py  typing.py  utils.py
src/rosbags/typesys/: __init__.py  __main__.py  base.py  idl.py  msg.py  peg.py  register.py  types.py
tests/: __init__.py  cdr.py  test_convert.py  test_highlevel.py  test_parse.py  test_reader.py  test_reader1.py  test_roundtrip.py  test_roundtrip1.py  test_serde.py  test_storage_sqlite.py  test_writer.py  test_writer1.py
tools/bench/: bench.py
tools/compare/: compare.py
