[metadata]
name = rosbags
version = 0.9.12
author = Ternaris
author_email = team@ternaris.com
home_page = https://gitlab.com/ternaris/rosbags
description = Pure Python library to read, modify, convert, and write rosbag files.
long_description = file: README.rst
long_description_content_type = text/x-rst
keywords =
    cdr
    conversion
    deserialization
    idl
    message
    msg
    reader
    ros
    rosbag
    rosbag2
    serialization
    writer
license = Apache 2.0
license_files = LICENSE.txt
platform = any
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering
    Typing :: Typed
project_urls =
  Code = https://gitlab.com/ternaris/rosbags
  Documentation = https://ternaris.gitlab.io/rosbags
  Issue tracker = https://gitlab.com/ternaris/rosbags/issues

[options]
include_package_data = true
package_dir =
    = src
packages = find_namespace:
zip_safe = false
python_requires =
    >=3.8.2
install_requires =
    lz4
    numpy
    ruamel.yaml
    zstandard

[options.entry_points]
console_scripts =
    rosbags-convert = rosbags.convert.__main__:main

[options.extras_require]
dev =
    darglint
    flake8
    flake8-annotations
    flake8-bugbear
    flake8-commas
    flake8-comprehensions
    flake8-docstrings
    flake8-fixme
    flake8-isort
    flake8-mutable
    flake8-print
    flake8-pyprojecttoml
    flake8-pytest-style
    flake8-quotes
    flake8-return
    flake8-simplify
    flake8-type-checking
    flake8-use-fstring
    mypy
    pep8-naming
    pytest
    pytest-cov
    pytest-flake8
    pytest-mypy
    pytest-pylint
    pytest-yapf3
    sphinx
    sphinx-autodoc-typehints
    sphinx-rtd-theme
    yapf

[options.packages.find]
where = src

[options.package_data]
* = py.typed

[sdist]
formats = gztar, zip
